deploy/kubernetes/canary/base-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: base-svc
  labels:
    app: base-app
  namespace: canary-ns
spec:
  type: ClusterIP
  selector:
    app: base-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
