deploy/kubernetes/canary/canary-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-svc
  labels:
    app: canary-app
  namespace: canary-ns
spec:
  type: ClusterIP
  selector:
    app: canary-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
