deploy/kubernetes/canary/base-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: base-ingress
  namespace: canary-ns
spec:
  ingressClassName: nginx
  rules:
    - host: messenger.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: base-svc
                port:
                  number: 80
