deploy/kubernetes/canary/canary-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-ingress
  namespace: canary-ns
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "30"
spec:
  ingressClassName: nginx
  rules:
    - host: messenger.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: canary-svc
                port:
                  number: 80
